# bcm_convertor

./: .gitattributes  .gitignore  CNAME  README.md  gui.ui  index.css  index.html  index.js  main.py  nprogress.js  package.json  vite.config.js
icon/: icon-windowed.icns
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/convert/kitten3/: 1.f2ae9fa040ecdb1371ad.js  7.cd58f3c977e80dc015d3.js  credits.html  player.html  player__668f85603183214a49c3.css  resource.bcm
src-tauri/convert/kitten3/libs/: 9ST49jhxQP.txt  catui-0.1.18.tgz  compress_img_worker.js
src-tauri/convert/kitten4/: package.json.example
src-tauri/convert/kitten4/main/: preload.js
src-tauri/convert/kitten4/renderer/: 0.js  1.js  10.js  11.js  12.js  13.js  14.js  15.js  16.js  17.js  18.js  19.js  2.js  3.js  4.js  6.js  7.js  8.js  9.js  index.html
src-tauri/convert/kitten4/renderer/dll/: vender.dll.js
src-tauri/convert/linux/AppDir/: AppRun  bcm.desktop
src-tauri/convert/mac/bcm.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Libraries/: libffmpeg.dylib
src-tauri/convert/mac/bcm.app/Contents/Frameworks/Electron Helper (GPU).app/Contents/: Info.plist
src-tauri/convert/mac/bcm.app/Contents/Frameworks/Electron Helper (GPU).app/Contents/MacOS/: Electron Helper (GPU)
src-tauri/convert/mac/bcm.app/Contents/Frameworks/Electron Helper (Renderer).app/Contents/MacOS/: Electron Helper (Renderer)
src-tauri/convert/online/: index.js
src-tauri/convert/windows/: info  player_icon
src-tauri/src/: main.rs  utils.rs
src/components/: About.vue  (+3 more)
(+289 files in other folders)
