[package]
name = "bcm_convertor"
version = "2.0.0"
description = "将自己在kitten3/4上的作品快速制作成独立应用程序"
authors = ["小鱼yuzifu"]
license = "GPL-3.0"
repository = "https://gitee.com/sf-yuzifu/bcm_convertor.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "os-all", "shell-all", "http-all", "fs-all", "dialog-open", "path-all", "macos-private-api", "window-close", "window-unmaximize", "window-unminimize", "window-hide", "window-start-dragging", "window-minimize", "window-show", "window-maximize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
